--- a/styling-react/src/SassComponent.scss
+++ b/styling-react/src/SassComponent.scss
@@ -15,38 +15,18 @@ $violet: #7950f2;
 .SassComponent {
   display: flex;
   flex-wrap: wrap;
-
   .box {
-    cursor: pointer;
-    transition: all 0.3s ease-in;
-
-    &.red {
-      background: $red;
-      @include square(1);
-    }
-    &.orange {
-      background: $orange;
-      @include square(2);
-    }
-    &.yellow {
-      background: $yellow;
-      @include square(3);
-    }
-    &.green {
-      background: $green;
-      @include square(4);
-    }
-    &.blue {
-      background: $blue;
-      @include square(5);
-    }
-    &.indigo {
-      background: $indigo;
-      @include square(6);
-    }
-    &.violet {
-      background: $violet;
-      @include square(7);
-    }
+    width: 100px;
+    height: 100px;
+    margin: 5px;
   }
+
+  .red { background: red; }
+  .orange { background: orange; }
+  .yellow { background: yellow; }
+  .green { background: green; }
+  .blue { background: blue; }
+  .indigo { background: indigo; }
+  .violet { background: violet; }
 }
+    
