--- a/todo-app/src/components/TodoListItem.scss
+++ b/todo-app/src/components/TodoListItem.scss
@@ -1,3 +1,11 @@
+.TodoListItem-virtualized {
+    &+& {
+        border-top: 1px solid #dee2e6;
+    }
+    &:nth-child(even) {
+        background: #f8f9fa;
+    }   
+
 .TodoListItem{
     padding: 1rem;
     display: flex;
@@ -40,4 +48,5 @@
     & + & {
         border-top: 1px solid #dee2e6;
     }
+}
 }
